# aletheia

./: .env.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  INC-FAF4.tar.gz.enc  MIGRATION_SK.md  README.md  REFACTOR-SPECS.md  SPECIFICATION.md  TASK_3.8.4_SUMMARY.md  TODO.md  aletheia_guided_troubleshooting_conversation.md  aletheia_idea.md  config.yaml.example  debug_tools.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_test.sh  test_aletheia_interactive.exp  test_run_debug.py  test_tool_debug.py  test_tool_passing.py
.claude/: memory.md  settings.local.json  split_memory.py
.claude/memory/: 1.1.1-initialize-python-project-structure-2.md  1.2-configuration-system-4.md  1.3-encryption-module-5.md  1.4-session-management-7.md  1.5-scratchpad-implementation-9.md  1.6-utility-modules-10.md  2.1-base-fetcher-interface-13.md  2.2-kubernetes-fetcher-14.md  2.4-prometheus-fetcher-16.md  2.5-data-summarization-18.md  2.6-integration-tests-for-data-collection-20.md  3.1-llm-provider-abstraction-24.md  3.1.5-sk-integration.md  3.1.6-configurable-llm-endpoint.md  3.1.7-azure-openai-support.md  3.2-base-agent-framework-12.md  3.2.3-sk-agent-base.md  3.3-orchestrator-agent-25.md  3.3.5-sk-handoff-orchestration.md  3.4-data-fetcher-agent-27.md  3.4.5-kubernetes-plugin.md  3.4.6-prometheus-plugin.md  3.4.7-git-plugin.md  3.4.8-sk-data-fetcher.md  3.4.9-kubernetes-param-extraction.md  3.5-pattern-analyzer-agent-22.md  3.5.6-sk-pattern-analyzer.md  3.6-code-inspector-agent-28.md  3.6.7-code-inspector-sk.md  3.7-root-cause-analyst-agent-30.md  3.7.6-root-cause-analyst-sk-migration.md  3.8-agent-integration-testing-32.md  3.8.3-sk-handoff-integration-tests.md  3.8.4-update-tests-sk.md  3.9-sk-documentation.md  4.1-cli-framework-34.md  4.2-guided-mode-implementation-36.md  4.5-input-handling.md  4.6-verbose-mode.md  4.7-enhanced-debug-logging.md  (+39 more)
.github/prompts/: copilot-instructions.md
.kiro/steering/: 00-quick-reference.md  01-architecture.md  02-development-workflow.md  03-agent-development.md  04-configuration-management.md  05-security-and-encryption.md  06-testing-strategy.md  07-troubleshooting-guide.md  08-contributing-guide.md  README.md
aletheia/: __init__.py  api.py  banner.txt  cli.py  commands.py  completion.py  config.py  console.py  context.py  encryption.py  enums.py  scratchpad.py  session.py
aletheia-script-executor/: Dockerfile
aletheia/agents/: __init__.py  agent_config.py  base.py  bedrock_chat_client_wrapper.py  bedrock_client.py  bedrock_response_processor.py  bedrock_tool_converter.py  bedrock_wrapper.py  chat_message_store.py  claude_code_analyzer.py  client.py  code_analyzer.py  code_inspector.py  data_fetcher.py  deepcopy_patch.py  entrypoint.py  handoff.py  history.py  instructions_loader.py  kubernetes_data_fetcher.py  loader.py  log_file_data_fetcher.py  middleware.py  model.py  orchestration_sk.py  orchestrator.py  pattern_analyzer.py  pcap_file_data_fetcher.py  prometheus_data_fetcher.py  prompt_template.md  prompt_template_old.md  root_cause_analyst.py  sk_base.py  skills.py  timeline_agent.py  triage.py
aletheia/channels/: __init__.py  base.py  chart_renderer.py  formatter.py  manifest.py  tui.py
aletheia/daemon/: __init__.py  auth.py  gateway.py  history.py  job_manager.py  protocol.py  server.py  session_manager.py  watcher.py
aletheia/demo/: __init__.py  agents.py  data.py  orchestrator.py  scenario.py
aletheia/engram/: __init__.py  db.py  embeddings.py  logging.py  models.py  tools.py  watcher.py
aletheia/fetchers/: __init__.py  base.py  kubernetes.py  prometheus.py  summarization.py
aletheia/knowledge/: __init__.py  db.py  (+3 more)
examples/: bedrock_response_format_example.py
tests/: __init__.py  test_api.py  test_bedrock_client.py  test_bedrock_integration.py  test_bedrock_response_processor.py  test_bedrock_tool_converter.py  test_bedrock_tool_integration.py  test_bedrock_wrapper.py  test_commands_api.py  test_compaction.py  test_completion.py  test_context.py  test_context_command.py  test_cost_command.py  test_custom_commands.py  test_loader.py  test_timeline_agent.py  test_user_agent_loader.py  test_verbose_mode.py
(+268 files in other folders)
